fix pictures overlapping by setting padding

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 body {
-    padding: 0;
+    padding-bottom: 5%;
     font-family: 'Lato', sans-serif;
 }
 
@@ -350,9 +350,8 @@ textarea {
   
  
 }
-.opaque-overlay {
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.74);
+
+.favourite-icon{
+  font-size: 30px;
 }
+
